Update some routes and Controller
