# api/routes/registriesRoute.js
@@ -5,7 +5,8 @@ const router = Router()
 router
     .get('/registries', RegistriesController.getRegistries)
     .get('/registries/:id', RegistriesController.getRegistriesId)
-    .get('/registries/:id/class', RegistriesController.getRegistriesByClass)
+    .get('/registries/class/:classid', RegistriesController.getRegistriesByClass)
+    .get('/registries/users/:userid', RegistriesController.getRegistriesByUser)
     .post('/registries', RegistriesController.postRegistries)
     .delete('/registries/:id', RegistriesController.deleteRegistries)
     .put('/registries/:id', RegistriesController.updateRegistries)
